--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -173,7 +173,8 @@
 
 
 @import "layout";
-@import "layout-alt";
+@import "layout-focus-task";
+@import "layout-focus-list";
 @import "navbar";
 
 @import "./notifications-panel.less";
