--- a/client/client/scripts/navigation/styles.less
+++ b/client/client/scripts/navigation/styles.less
@@ -41,7 +41,7 @@
       border-style: solid;
     }
 
-    [cam-form-inline-field] {
+    [cam-widget-inline-field] {
       margin-top: -2px;
       margin-bottom: -2px;
     }
