--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -179,7 +179,6 @@
 
 @import "./notifications-panel.less";
 
-@import "../scripts/controls/styles";
 @import "../scripts/filter/styles";
 @import "../scripts/task/styles";
 @import "../scripts/navigation/styles";
@@ -252,10 +251,11 @@ strong {
 
 
 
-@import "../scripts/form/styles.less";
+@import "../scripts/widgets/styles.less";
 @import "../scripts/user/styles.less";
 @import "../scripts/process/styles.less";
 @import "../scripts/variable/styles.less";
+@import "../scripts/form/styles.less";
 @import "_loader.less";
 @import "_modal.less";
 
