--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -170,8 +170,6 @@
 
 
 
-
-
 @import "layout";
 @import "layout-focus-task";
 @import "layout-focus-list";
@@ -312,3 +310,5 @@ strong {
   }
 }
 
+
+@import "_ie-fixes";
