fix(layout): set a minimal height on controls row
Also changes the positionning of page notification to avoid conflicts
with the layout and move them to the lower right corner (similar to
cockpit).

Comment so debugging utilities.

Related to: CAM-2943, CAM-2883

--- a/client/client/styles/_ie-fixes.less
+++ b/client/client/styles/_ie-fixes.less
@@ -1,133 +1,33 @@
 html.ie {
 
-  body:before {
-    position: fixed;
-    top: 0;
-    left: 0;
-    content: 'IE 9';
-    z-index: 99999;
-    display: block;
-    background-color: white;
-    padding: 4px 6px;
-    border: 1px solid black;
-    border-width: 0 4px 4px 0;
-  }
+  // body:before {
+  //   position: fixed;
+  //   top: 0;
+  //   left: 0;
+  //   content: 'IE 9';
+  //   z-index: 99999;
+  //   display: block;
+  //   background-color: white;
+  //   padding: 4px 6px;
+  //   border: 1px solid black;
+  //   border-width: 0 4px 4px 0;
+  // }
 
-  &.ie11 {
-    body:before {
-      content: 'IE 11';
-    }
-  }
-
-  &.ie10 {
-    body:before {
-      content: 'IE 10';
-    }
-  }
-
-  &.ie9 {
-    body:before {
-      content: 'IE 9';
-    }
-  }
-
-
-  // .layout-focus-list {
-  //   .controls,
-  //   .task-board,
-  //   .fake-columns {
-  //     &.row {
-  //       padding: 0;
-  //     }
-
-  //     > .cols {
-  //       position: relative;
-  //       float: left;
-  //       -ms-transform: none;
-  //           transform: none;
-
-  //       &.task-filters {
-  //         width: @grid-gutter-width;
-
-  //         margin-right: 0 - @grid-gutter-width;
-  //       }
-
-  //       &.task-list {
-  //         margin-left: @grid-gutter-width;
-  //         // padding-left: @grid-gutter-width / 2;
-  //         padding-right: @grid-gutter-width * 1.5;
-  //       }
-
-  //       &:after {
-  //         display: none;
-  //       }
-  //     }
-  //   }
-
-
-  //   .controls {
-  //     > .cols {
-  //       &.task-filters {
-  //         h5 {
-  //           display: none;
-  //         }
-  //         button.off-canvas-toggle {
-  //           margin-left: -20px;
-  //         }
-  //       }
-  //     }
-  //   }
-
-  //   .task-board {
-  //     > .cols {
-  //       &.task-filters {
-  //         > .inner {
-  //           visibility: hidden;
-  //         }
-  //       }
-  //     }
-  //   }
-
-
-
-
-
-  //   &.filters-column-open {
-  //     .controls,
-  //     .task-board,
-  //     .fake-columns {
-  //       > .cols {
-  //         &.task-filters {
-  //           width: 330px;
-  //           margin-right: -330px;
-
-  //           > .inner {
-  //             visibility: visible;
-  //           }
-
-  //           h5 {
-  //             display: inline-block;
-  //           }
-  //         }
-
-  //         &.task-list {
-  //           margin-left: 300px;
-  //           padding-right: 300px;
-  //         }
-  //       }
-  //     }
+  // &.ie11 {
+  //   body:before {
+  //     content: 'IE 11';
   //   }
   // }
 
-
-
-  // .layout-focus-task {
-  //   &.filters-column-open {
-
+  // &.ie10 {
+  //   body:before {
+  //     content: 'IE 10';
   //   }
+  // }
 
-  //   &.list-column-open {
-
+  // &.ie9 {
+  //   body:before {
+  //     content: 'IE 9';
   //   }
   // }
 }
