--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -263,3 +263,21 @@
 .current-groups {
   margin-bottom: (@grid-gutter-width / 2);
 }
+
+.group-input {
+  
+  &.ng-invalid {
+
+    &.ng-dirty {
+      border-color: #a94442;
+      -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+
+      &:focus {
+        border-color: #843534;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+      }
+    }
+  }
+}
