--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -170,12 +170,10 @@
 
 
 
-@import "layout";
-@import "layout-focus-task";
-@import "layout-focus-list";
-@import "navbar";
+@import "_layout";
+@import "_navbar";
 
-@import "./notifications-panel.less";
+@import "_notifications-panel.less";
 
 @import "../scripts/filter/styles";
 @import "../scripts/task/styles";
@@ -314,6 +312,3 @@ strong {
   position: relative;
   padding: @grid-gutter-width 0;
 }
-
-// @import "_ie-fixes";
-
