impr(styles): move mixins to an imported less file

--- a/client/client/styles/styles.less
+++ b/client/client/styles/styles.less
@@ -170,6 +170,8 @@
 
 
 
+@import "_mixins";
+
 @import "_layout";
 @import "_navbar";
 
@@ -180,14 +182,6 @@
 @import "../scripts/navigation/styles";
 
 
-
-.truncate (@max-width) {
-  max-width: @max-width;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow-x: hidden;
-  overflow-y: visible;
-}
 
 
 
