--- a/client/client/scripts/task/styles.less
+++ b/client/client/scripts/task/styles.less
@@ -13,7 +13,11 @@
     }
 
     li {
+      max-width: 50%;
       vertical-align: middle;
+      .preview {
+        .truncate(100%);
+      }
     }
 
     input {
